common/components: correct overflow logic for TableComponent
Summary:
Patches a bug where I foolishly added `overflow: hidden` to the
generic tableContainer class instead of the autosizeHeight class,
which affected all tables instead of just the new feature in D38050.
This caused all tables with overflow to be unscrollable.

Test Plan: Tested in UI.

Reviewers: jzhao, margi, nsawas, O13 UI Common, ecarrel

Reviewed By: O13 UI Common, ecarrel

Subscribers: ecarrel, cji

Maniphest Tasks: T28297

Differential Revision: https://phabricator.grailbio.com/D38188

fbshipit-source-id: fb59a98

--- a/src/table/table.module.scss
+++ b/src/table/table.module.scss
@@ -67,8 +67,7 @@
 $scrollbar-width: 7px;
 .tableContainer {
   position: relative;
-  height: 300px;
-  overflow: hidden;
+  overflow: auto;
   // Make scrollbar more obvious on tables, since users have a hard time seeing
   // overflowable content (especially on Mac)
   @include grail-scrollbar($scrollbar-width);
